Update SimilarityCalculator.java
working similar calculator code, interactive with the menu.java file